--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,37 @@
-/* Common styles */
+/* FONTS  */
+@font-face {
+  font-family: 'Public Sans';
+  src: url('../fonts/PublicSans-Regular.woff2') format('woff2'),
+      url('../fonts/PublicSans-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Public Sans';
+  src: url('../fonts/PublicSans-Thin.woff2') format('woff2'),
+      url('../fonts/PublicSans-Thin.woff') format('woff');
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Public Sans';
+  src: url('../fonts/PublicSans-Medium.woff2') format('woff2'),
+      url('../fonts/PublicSans-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+/* custom property  */
+:root{
+  --linear-gradient: linear-gradient(135deg, #33D35E 0%, #2AB6D9 99.58%);
+  --light-green: #30C88F;
+  --dark: #2D314D;
+  --text-color: #9597A5;
+}/* Common styles */
 html{
   box-sizing: border-box;
 }
@@ -8,11 +41,12 @@ html{
 body{
   padding: 0;
   margin: 0;
-  font-family: "Rubik", "Arial", sans-serif;
-  font-weight: 500;
-  font-size: 19px;
-  line-height: 23px;
-  color: #515151;
+  margin-top: 80px;
+  font-family: "Public Sans", "Arial", sans-serif;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 26px;
+  color: var(--text-color);
 }
 .visually-hidden {
   position: absolute;
@@ -23,8 +57,4 @@ body{
   padding: 0;
   clip: rect(0 0 0 0);
   overflow: hidden;
-}
-img{
-  max-width: 100%;
-  display: block;
 }
