add site header

--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,8 @@
   --light-green: #30C88F;
   --dark: #2D314D;
   --text-color: #9597A5;
-}/* Common styles */
+}
+/* Common styles */
 html{
   box-sizing: border-box;
 }
@@ -41,7 +42,6 @@ html{
 body{
   padding: 0;
   margin: 0;
-  margin-top: 80px;
   font-family: "Public Sans", "Arial", sans-serif;
   font-weight: normal;
   font-size: 16px;
@@ -57,4 +57,93 @@ body{
   padding: 0;
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+.request__button {
+  padding: 8px 34px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 28px;
+  background: var(--linear-gradient);
+  border-radius: 22px;  
+  color: #fff;
+  text-decoration: none;
+  transition: opacity 0.3s ease;
+}
+.request__button:hover{
+  opacity: 0.4;
+  color: #fff;
+}
+/* SITE HEADER  */
+.site-nav{
+  padding-top: 18px;
+  padding-bottom: 18px;
+  background-color: #fff;
+}
+.navbar-toggler:focus{
+  box-shadow: none;
+}
+.navbar-toggler-icon{
+  background-image: url("../img/toggler-open.svg");
+}
+.site-nav__list--wrapper{
+  flex-grow: 0;
+}
+.site-nav__item:not(:first-child){
+  margin-left: 30px;
+}
+.site-nav__link{
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: -0.107692px;
+  color: var(--text-color);
+  transition: color 0.3s ease;
+}
+.site-nav__link:hover{
+  color: var(--dark);
+}
+
+@media screen and (max-width: 1199px) {
+  .container{
+    max-width: 100%;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .container{
+    max-width: 100%;
+    padding-right: 30px;
+    padding-left: 30px;
+  }
+  /* header  */
+  .site-nav__list{
+    padding: 32px;
+    align-items: center;
+    background-color: #fff;
+  }
+  .site-nav__item:not(:first-child){
+    margin-left: 0;
+    margin-top: 24px;
+  }
+  .site-nav__link{
+    font-size: 18px;
+    line-height: 21px;
+    color: var(--dark);
+  }
+  .site-nav__link:hover{
+    color: var(--text-color);
+  }
+  .site-nav .request__button{
+    display: none;
+  }
+}
+@media screen and (max-width: 575px) {
+  .container{
+    max-width: 100%;
+    padding-right: 24px;
+    padding-left: 24px;
+  }
+  .site-nav .request__button{
+    display: none;
+  }
 }
