some bugs fixed

--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@
   font-style: normal;
   font-display: swap;
 }
+
 /* custom property  */
 :root{
   --linear-gradient: linear-gradient(135deg, #33D35E 0%, #2AB6D9 99.58%);
@@ -32,6 +33,7 @@
   --dark: #2D314D;
   --text-color: #9597A5;
 }
+
 /* Common styles */
 html{
   box-sizing: border-box;
@@ -49,16 +51,6 @@ body{
   line-height: 26px;
   color: var(--text-color);
 }
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
 .request__button {
   padding: 8px 34px;
   font-weight: 500;
@@ -74,6 +66,7 @@ body{
   opacity: 0.4;
   color: #fff;
 }
+
 /* SITE HEADER  */
 .site-header{
   position: fixed;
@@ -113,6 +106,7 @@ body{
 .site-nav__link:hover{
   color: var(--dark);
 }
+/* SITE HEADER END  */
 
 /* HERO  */
 .hero{
@@ -209,6 +203,7 @@ body{
   letter-spacing: -0.25px;
 }
 /* EASYBANK END  */
+
 /* ARTICLES  */
 .articles{
   padding-top: 80px;
@@ -225,6 +220,9 @@ body{
   line-height: 64px;
   letter-spacing: -0.714286px;
   color: var(--dark);
+}
+.card-img-top{
+  max-height: 280px;
 }
 .card-body{
   padding: 24px;
@@ -287,9 +285,22 @@ body{
   letter-spacing: -0.234375px;
   color: rgba(255, 255, 255, 0.5);
 }
-
+.social-network{
+  text-decoration: none;
+}
+.social-network > i{
+  font-size: 22px;
+  color: #fff;
+  transition: color 0.3s ease;
+}
+.social-network > i:hover{
+  color: var(--light-green);
+}
 /* FOOTER END  */
 
+/* MEDIA QUERIES  */
+
+/* max-width: 1199px */
 @media screen and (max-width: 1199px) {
   .container{
     max-width: 100%;
@@ -302,6 +313,8 @@ body{
     padding-bottom: 38px;
   }
 }
+
+/* max-width: 991px */
 @media screen and (max-width: 991px) {
   .container{
     max-width: 100%;
@@ -318,6 +331,8 @@ body{
     line-height: 60px;
   }
 }
+
+/* max-width: 767px */
 @media screen and (max-width: 767px) {
   .container{
     max-width: 100%;
@@ -367,7 +382,14 @@ body{
     width: 100%;
     height: 650px;
   }
+  /* EASYBANK */
+  .easybank{
+    padding-top: 64px;
+    padding-bottom: 64px;
+  }
 }
+
+/* max-width: 575px */
 @media screen and (max-width: 575px) {
   .container{
     padding-right: 24px;
